Bug 149956 - Activating RTL Content Does Not Trigger Icon Flipping in Formatting Toolbar
Summary: Activating RTL Content Does Not Trigger Icon Flipping in Formatting Toolbar
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium trivial
Assignee: Maxim Monastirsky
URL:
Whiteboard: target:7.5.0
Keywords:
: 114505 (view as bug list)
Depends on:
Blocks: Toolbars Icon-Themes-Code-Language RTL-UI
  Show dependency treegraph
 
Reported: 2022-07-11 22:42 UTC by Rizal Muttaqin
Modified: 2022-11-19 16:30 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Some buttons does not flipped normally (134.13 KB, image/png)
2022-07-11 22:42 UTC, Rizal Muttaqin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rizal Muttaqin 2022-07-11 22:42:29 UTC
Created attachment 181232 [details]
Some buttons does not flipped normally

Icon/button flipping is something previously happens when user switch to RTL document. But peculiarly, this behavior does not happen in Formatting toolbar while works fine in Bullet and Numbering toolbar.

Step to reproduce
1. Enable RTL with Tools > Options > Language Settings > Complex text layout: Arabic (Arab Saudi)
2. Create a new Writer document and switch to Right-to-Left (Ctrl+Shift+D)
3. See some icons in Formatting toolbar that used to flipped (e.g. Toggle Unordered List, Toggle Ordered List, No List, Increase Indent, Decrease Indent

Affected in:
Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: c1c8ce3b0f1037bca4d500af2f39363cd9d38db6
CPU threads: 8; OS: Linux 5.13; UI render: default; VCL: kf5 (cairo+xcb)
Locale: id-ID (id_ID.UTF-8); UI: en-US
Calc: threaded

Not affected in: 

Version: 7.3.4.2 / LibreOffice Community
Build ID: 30(Build:2)
CPU threads: 8; OS: Linux 5.13; UI render: default; VCL: kf5 (cairo+xcb)
Locale: id-ID (id_ID.UTF-8); UI: id-ID
Ubuntu package version: 1:7.3.4~rc2-0ubuntu0.20.04.1~lo1
Calc: threaded
Comment 1 Maxim Monastirsky 2022-07-12 07:53:18 UTC
Don't see any difference between 7.5 and 7.3, but I do see a difference with how Writer is opened. Flipping works for me when opening Writer from the start center, but not when starting Writer directly with "--writer". Also hiding the toolbar and showing it again fixes the issue.
Comment 2 Rizal Muttaqin 2022-07-12 21:11:59 UTC
(In reply to Maxim Monastirsky from comment #1)
> Don't see any difference between 7.5 and 7.3, but I do see a difference with
> how Writer is opened. Flipping works for me when opening Writer from the
> start center, but not when starting Writer directly with "--writer". Also
> hiding the toolbar and showing it again fixes the issue.

Ah you are right, but this leads to inconsistency. Any clue what causes this?
Comment 3 Commit Notification 2022-07-13 12:52:51 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/421688a4c2fc64e64ce211d579bad2174e005db4

tdf#149956 Pass the correct frame to VclStatusListener

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2022-07-13 12:52:59 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e695b6d89a00c86fc35332213be42d5b29196eae

Related: tdf#149956 Keep in sync after icon theme change

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Rizal Muttaqin 2022-07-16 22:23:18 UTC
I can confirm this issue is fixed now, but the icons in sidebar does not flipped (should be another issue?)

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: ce29e6299932fc079b05b60662ba95c8342990bc
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: kf5 (cairo+xcb)
Locale: id-ID (id_ID.UTF-8); UI: id-ID
Calc: threaded
Comment 6 Maxim Monastirsky 2022-07-17 21:13:39 UTC
(In reply to Rizal Muttaqin from comment #5)
> but the icons in sidebar does not flipped
You're right. It seems that my commit broke the sidebar for non-gtk3 (gtk3 was broken already for a while, which is why I didn't notice the problem). I think I'll restore the non-gtk3 solution for now, so there will be no regression. But we really should find another solution that covers the gtk3 sidebar too.
Comment 7 Commit Notification 2022-08-30 11:08:16 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2958e4c92f15652c424765f02c87518011eb2406

tdf#149956 Remove previous vcl only solution

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2022-08-30 11:09:32 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4fb8c0d14cb2468f7336438004f699b9eb7e7e4a

tdf#149741 tdf#149956 Make flipping work also in the sidebar

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2022-08-30 11:09:41 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/dbeb697d62250e9429462c7f61b859893262a651

tdf#149956 Rework toolbar image flipping

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Maxim Monastirsky 2022-11-19 16:30:00 UTC
*** Bug 114505 has been marked as a duplicate of this bug. ***