tdf#149956 Pass the correct frame to VclStatusListener

Starting directly to Writer (i.e. with "--writer") will attempt
to create VclStatusListeners for .uno:ImageOrientation before
the frame is activated, causing the dispatcher to not be found.

Also defer that stuff to after a toolbar is filled, so we get a
correct initial state for toolbars which shown when the current
paragraph is rtl already. (There is a similar problem with the
NB, but it isn't handled in this patch.)

Change-Id: Ie482007c10a4014b4a2fd4d53f05d433777ecfb6